--- a/src/components/VirtualList.html
+++ b/src/components/VirtualList.html
@@ -1,5 +1,5 @@
 <Tooltip ref:tooltip x="{x}" y="{y}" overTd="{overTd}" ttVal='{ttVal}'/>
-<div ref:viewport on:scroll='refresh()' style='height: {height};' on:mousemove='set({ x: event.clientX - _bbox.x, y: event.clientY - _bbox.y })'>
+<div ref:viewport on:scroll='refresh()' style='height: {height};' on:mousemove='set({ x: event.clientX - _bbox.x, y: event.clientY - _bbox.y })' bind:offsetHeight="viewportHeight">
 	<div ref:container style='padding-top: {_top}px; padding-bottom: {_bottom}px;'>
 		{#if fields.length}
 			<div id="thead" style='transform: translateY({_headerOffset}px);'>
@@ -151,7 +151,7 @@ export default {
 			this.initialise();
 		}
 		this.on('state', ({ changed, previous, current }) => {
-			if (changed.items || changed.height || changed.itemHeight) {
+			if (changed.items || changed.height || changed.itemHeight || changed.viewportHeight) {
 				if (current.itemHeight && (changed.itemHeight || current.items.length > this.heightMap.length)) {
 					this.heightMap = current.items.map(() => current.itemHeight);
 				} else if (current.items.length > this.heightMap.length) {
@@ -178,9 +178,8 @@ export default {
 	},
 	methods: {
 		initialise () {
-			const { items, itemHeight } = this.get();
+			const { items, itemHeight, viewportHeight } = this.get();
 			const { viewport } = this.refs;
-			const viewportHeight = viewport.offsetHeight;
 			if (itemHeight) {
 				this.heightMap = items.map(item => itemHeight);
 				this.set({
@@ -205,8 +204,8 @@ export default {
 			}
 		},
 		refresh (el) {
-			const { items, start, end, itemHeight } = this.get();
-			const { offsetHeight, scrollTop, scrollLeft } = this.refs.viewport;
+			const { items, start, end, itemHeight, viewportHeight } = this.get();
+			const { scrollTop, scrollLeft } = this.refs.viewport;
 			let paddingTop = 0;
 			let offset = 0;
 			let i = 0;
@@ -225,7 +224,7 @@ export default {
 			this.set({_headerOffset});
 			const newStart = i++;
 			for (; i < items.length; i += 1) {
-				if (offset >= scrollTop + offsetHeight) break;
+				if (offset >= scrollTop + viewportHeight) break;
 				offset += this.heightMap[i];
 			}
 			const newEnd = i;
