--- a/src/components/Tooltip.html
+++ b/src/components/Tooltip.html
@@ -14,8 +14,7 @@
 		border-radius 3px
 		margin-top -25px
 		max-width 350px
-		max-height 250px
-		transform translate(-50%, -100%)
+		transform translate(0, -50%)
 		pointer-events none
 		z-index 999999
 </style>
