--- a/src/components/History.html
+++ b/src/components/History.html
@@ -107,7 +107,7 @@ export default {
 		},
 
 		genId () {
-			const id = uniqueId('q');
+			const id = uniqueId('');
 			this.set({ currentId: id });
 			return id;
 		},
