--- a/src/components/Input.html
+++ b/src/components/Input.html
@@ -10,7 +10,9 @@
 		margin-top 7px
 		width 100%
 		position relative
-
+		flex 1
+		max-height 150px
+		overflow-y auto
 	#help-text
 		position absolute
 		top 3px
