flex height layout

--- a/src/components/Table.html
+++ b/src/components/Table.html
@@ -9,7 +9,8 @@
 	#table
 		border 2px solid #000
 		width 100%
-		height calc(100vh - 500px)
+		display flex
+		flex 1
 	.meta
 		position absolute;
 		bottom 0
