--- a/src/components/Input.html
+++ b/src/components/Input.html
@@ -10,9 +10,7 @@
 		margin-top 7px
 		width 100%
 		position relative
-		flex 1
-		max-height 150px
-		overflow-y auto
+		height 229px
 	#help-text
 		position absolute
 		top 3px
@@ -31,7 +29,7 @@
 		border-radius 5px 5px 0 0
 		border 2px solid #000
 		margin 0
-		min-height 75px
+		height calc(100% - 36px)
 		&:before
 			content ' '
 			position absolute
