--- a/assets/codemirror.css
+++ b/assets/codemirror.css
@@ -2,9 +2,16 @@
 
 .CodeMirror {
   /* Set height, width, borders, and global font properties here */
-  font-family: 'Andale Mono', monospace;
-  height: auto;
+  font-family: 'Inconsolata', monospace;
+  /*height: auto;*/
+  overflow: hidden;
+  background: white;
   color: black;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
   direction: ltr;
 }
 
@@ -116,25 +123,25 @@
 .cm-link {text-decoration: underline;}
 .cm-strikethrough {text-decoration: line-through;}
 
-.cm-s-default .cm-keyword {color: #708;}
+.cm-s-default .cm-keyword {color: #a71d5d;}
 .cm-s-default .cm-atom {color: #219;}
-.cm-s-default .cm-number {color: #164;}
+.cm-s-default .cm-number {color: #55a532;}
 .cm-s-default .cm-def {color: #00f;}
 .cm-s-default .cm-variable,
-.cm-s-default .cm-punctuation,
+/*.cm-s-default .cm-punctuation,*/
 .cm-s-default .cm-property,
-.cm-s-default .cm-operator {}
+.cm-s-default .cm-operator { color: #df5000; }
 .cm-s-default .cm-variable-2 {color: #05a;}
-.cm-s-default .cm-variable-3, .cm-s-default .cm-type {color: #085;}
-.cm-s-default .cm-comment {color: #a50;}
-.cm-s-default .cm-string {color: #a11;}
+.cm-s-default .cm-variable-3, .cm-s-default .cm-type {color: #a71d5d;}
+.cm-s-default .cm-comment {color: #969896;}
+.cm-s-default .cm-string {color: #df5000;}
 .cm-s-default .cm-string-2 {color: #f50;}
-.cm-s-default .cm-meta {color: #555;}
+.cm-s-default .cm-meta {color: #969896;}
 .cm-s-default .cm-qualifier {color: #555;}
 .cm-s-default .cm-builtin {color: #30a;}
-.cm-s-default .cm-bracket {color: #997;}
-.cm-s-default .cm-tag {color: #170;}
-.cm-s-default .cm-attribute {color: #00c;}
+.cm-s-default .cm-bracket {color: #795da3; font-weight: bold;}
+.cm-s-default .cm-tag {color: #333333;}
+.cm-s-default .cm-attribute {color: #0086b3;}
 .cm-s-default .cm-hr {color: #999;}
 .cm-s-default .cm-link {color: #00c;}
 
@@ -145,8 +152,8 @@
 
 /* Default styles for common addons */
 
-div.CodeMirror span.CodeMirror-matchingbracket {color: #0b0;}
-div.CodeMirror span.CodeMirror-nonmatchingbracket {color: #a22;}
+div.CodeMirror span.CodeMirror-matchingbracket {border-bottom: 1px solid #795da3;padding-bottom: 1px;}
+div.CodeMirror span.CodeMirror-nonmatchingbracket {color: #63a35c;}
 .CodeMirror-matchingtag { background: rgba(255, 150, 0, .3); }
 .CodeMirror-activeline-background {background: #e8f2ff;}
 
@@ -154,12 +161,6 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {color: #a22;}
 
 /* The rest of this file contains styles related to the mechanics of
    the editor. You probably shouldn't touch them. */
-
-.CodeMirror {
-  position: relative;
-  overflow: hidden;
-  background: white;
-}
 
 .CodeMirror-scroll {
   overflow: scroll !important; /* Things will break if this is overridden */
