add active state

--- a/src/components/Input.html
+++ b/src/components/Input.html
@@ -123,6 +123,7 @@ export default {
 			extraKeys: {
 				'Ctrl-Space': 'autocomplete',
 				'Cmd-Enter': (el) => {
+					this.refs.button.classList.add('active');
 					this.onQuery();
 				}
 			}
