--- a/src/components/Table.html
+++ b/src/components/Table.html
@@ -44,7 +44,7 @@ export default {
 		ipcRenderer.on('query-ok', (event, {rows, fields, query}) => {
 			console.log('fields', fields);
 			this.set({ processing: false, rows, fields });
-			console.clear();
+			// console.clear();
 			console.log(query);
 			// console.log(rows);
 		});
