clean up css;add mapbox

--- a/src/components/Input.html
+++ b/src/components/Input.html
@@ -62,7 +62,7 @@
 		background: $button-active-color;
 	}
 
-	:global(button.active) {
+	#input-container :global(button.active) {
 		animation: simulateActiveState 135ms 1;
 	}
 
