--- a/src/components/Input.html
+++ b/src/components/Input.html
@@ -45,6 +45,8 @@
 			background #f7f7f7
 			border-right 1px solid #ddd
 	button
+		color #000
+		font-weight normal
 		width 100%
 		font-size 16px
 		background #54d48b
